# mfg-tui

./: pyproject.toml
src/: __init__.py  __main__.py  context.py  defs.py  tui_context.py  types.py  widgets.py
tests/: test_defs.py
