[tool.poetry]
name = "mfg-tui"
version = "0.1.0"
description = "manufacturing app terminal UI"
authors = ["alex"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.10"
picotui = "^1.2.1"
loguru = "^0.6.0"
tomlkit = "^0.11.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
